# theconfiguration-processor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
output/: test-expanded.html
src/: __init__.py  cli.py  gui.py  main.py  progress_tracker.py  web.py
src/ai/: __init__.py  llm_client.py  prompts.py  summary_generator.py
src/analyzer/: __init__.py  security_analyzer.py
src/differ/: __init__.py  comparator.py  diff_generator.py  models.py
src/generator/: __init__.py  html_generator.py  html_generator_security.py  templates.py
src/parser/: __init__.py  config_parser.py  constants.py  models.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_parser.py
